<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".DetailActivity">

        <ImageView
            android:id="@+id/ivAvatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/profile_picture"
            android:layout_gravity="center_horizontal"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/username"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_gravity="center_horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/ivAvatar"
            app:layout_constraintStart_toStartOf="@+id/ivAvatar"
            app:layout_constraintTop_toBottomOf="@+id/tvUsername"
            app:layout_constraintVertical_bias="0.0"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvFollowers"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/total_follower"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvFollowing"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/total_following"
                android:textAlignment="center"
                android:textStyle="bold" />

        </LinearLayout>


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvFollowing" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="503dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabs"
            app:layout_constraintVertical_bias="0.0" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_marginTop="60dp"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="top|center_horizontal"
        tools:visibility="visible" />

</FrameLayout>

